# dnsbench

./: Cargo.toml  LICENSE  README.md  dns.txt
src/: main.rs  utils.rs
